--- a/common/math/graphics/system/xGy_xHw_addnoise.tex
+++ b/common/math/graphics/system/xGy_xHw_addnoise.tex
@@ -16,8 +16,8 @@
   %-------------------------------------
   % transfer function boxes
   %-------------------------------------
-  \fnodeput{0}{ 0}{+0.75}{sysG}{$\fg(n)$}%
-  \fnodeput{0}{ 0}{-0.75}{sysH}{$\fh(n)$}%
+  \fnodeput{0}{ 0}{+0.75}{sysG}{$\fG$}%
+  \fnodeput{0}{ 0}{-0.75}{sysH}{$\fH$}%
     %       |   |   |     |       |____ label in box
     %       |   |   |     |____________ node name
     %       |   |   |__________________ y location
