--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -445,20 +445,30 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 \end{align*}
 \end{proof}
 
+\prefpp{thm:ZSxy} demonstrates that if a random input $\rvx(n)$ is processed by an \prope{LTI} system
+$\fh(n)$ with output $\rvy(n)$, then the cross-spectral density and auto-spectral density are 
+related simply by
+$\Swxy(\omega)=\Swxx(\omega)\FH^\ast(\omega)$. 
+But what happens to $\Swxy(\omega)$ if we add uncorrelated zero-mean noise into the input $\rvx$
+and similarly to the output $\rvy$?
+The somewhat surprising but happy answer to this question is: \emph{Nothing}!
+\ldots as demonstrated by \pref{cor:sysH_addnoise_lti} (next). 
+That is, uncorrelated additive noise has \emph{no effect} on cross-correlation!
+However note that it \emph{does} have an effect on auto-correlation (also next).
 %---------------------------------------
 \begin{corollary}
 \label{cor:sysH_addnoise_lti}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 \corbox{
-  \brb{\begin{array}{FM}
-      (A).& $\fh$ is \prope{LTI} \scs and
+  \brb{\begin{array}{FMD}
+      (A).& $\FH$ is \prope{LTI} &and
     \\(B).& hypotheses of
-        \\& \pref{thm:sysH_addnoise}
+        \\& \pref{thm:sysH_addnoise}&\xrefpo{thm:sysH_addnoise}
   \end{array}}
   \implies
   \brb{\begin{array}{FrclD}
-      (1).&\Szyy(z)      &=& \brs{\Szxx(z)     +\Szuu(z)}\ZH(z)\ZH\brp{\frac{1}{z^\ast}} + \Szvv(z) & and
+      (1).&\Szyy(z)      &=& \brs{\Szxx(z)     +\Szuu(z)}\ZH(z)\ZH^\ast\brp{\frac{1}{z^\ast}} + \Szvv(z) & and
     \\(2).&\Swyy(\omega) &=& \brs{\Swxx(\omega)+\Swuu(\omega)}\abs{\FH(\omega)}^2 + \Swvv(\omega)   & and
     \\(3).&\Szxy(z)      &=&      \Szxx(z)      \ZH^\ast\brp{\frac{1}{z^\ast}}                      & and
     \\(4).&\Swxy(\omega) &=&      \Swxx(\omega) \FH^\ast(\omega)                                    &
