--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -115,6 +115,7 @@
 \newcommand{\xxxref}[3]{{\sffamily\addfontfeatures{Scale=0.71}(\prettyref{#1} page~\pageref{#1}, \prettyref{#2} page~\pageref{#2}, \prettyref{#3} page~\pageref{#3})}}  % 3 prefixed references with page numbers
 \newcommand{\xrefn} [1]{{\sffamily\addfontfeatures{Scale=0.71}(\prettyref{#1})}}% prefixed reference with no page number
 \newcommand{\xrefp} [1]{{\sffamily\addfontfeatures{Scale=0.71}\prettyref{#1} page~\pageref{#1}}}  % prefixed reference with page number
+\newcommand{\xrefpo} [1]{{\sffamily\addfontfeatures{Scale=0.71}(page~\pageref{#1})}}  % reference with page number only
 \newcommand{\xref}  [1]{\xrefP{#1}}
 \newcommand{\xrefh}[1]{}% hide the xref
 \newcommand{\ifxref}[2]{\ifthenelse{\boolean{#1}}{\xref{#2}}{}}% if doc has <flag#1> then include reference#2
@@ -1593,11 +1594,11 @@
 % statistics
 %--------------------------------------
  \newcommand{\pmean} [0]   {{\mu}}
- \newcommand{\pmeanx}[1][X]{{\pmean_{\mathsfup{#1}}}}
+ \newcommand{\pmeanx}[1][X]{{\mu_{\mathsfup{#1}}}}
  \newcommand{\pmeany}[0]   {{\pmeanx[Y]}}
  \newcommand{\pVar}        {{\mathfnct{V\!a\!r}}}
  \newcommand{\pvar}  [0]   {{\sigma^2}}
- \newcommand{\pvarx} [1][X]{{\pvar_{\mathsfup{#1}}}}
+ \newcommand{\pvarx} [1][X]{{\sigma^2_{\mathsfup{#1}}}}
  \newcommand{\pvary} [0]   {{\pvarx[Y]}}
  \newcommand{\pvarxy}[0]   {{\sigma_{\mathsfup{xy}}}}
  \newcommand{\pQ}[0]       {{\mathfnct{Q}}}  % expected value
