--- a/common/operator.tex
+++ b/common/operator.tex
@@ -258,11 +258,11 @@ Let $\opL$ be an operator from a linear space $\spX$ to a linear space $\spY$, b
 \thmbox{
   \text{$\opL$ is \prope{linear}}
   \qquad\implies\qquad
-  \brbl{\begin{array}{>{\scy}r>{\ds}lc>{\ds}lC}
-      1. & \opL\vzero    &=& \vzero                           & 
-    \\2. & \opL(-\vx)    &=& -(\opL\vx)                       & \forall \vx\in\spX
-    \\3. & \opL(\vx-\vy) &=& \opL\vx - \opL\vy                & \forall \vx,\vy\in\spX
-    \\4. & \opL\brp{\sum_{n=1}^N \alpha_n\vx_n}  &=& \sum_{n=1}^N \alpha_n\brp{\opL\vx_n}  & \vx_n\in\spX,\,\alpha_n\in\F
+  \brbl{\begin{array}{F>{\ds}lc>{\ds}lCD}
+      1. & \opL\vzero    &=& \vzero                                                        &                              & and
+    \\2. & \opL(-\vx)    &=& -(\opL\vx)                                                    & \forall \vx\in\spX           & and
+    \\3. & \opL(\vx-\vy) &=& \opL\vx - \opL\vy                                             & \forall \vx,\vy\in\spX       & and
+    \\4. & \opL\brp{\sum_{n=1}^\xN \alpha_n\vx_n}  &=& \sum_{n=1}^\xN \alpha_n\brp{\opL\vx_n}  & \vx_n\in\spX,\,\alpha_n\in\F &
   \end{array}}
 }
 \end{theorem}
@@ -301,11 +301,11 @@ Let $\opL$ be an operator from a linear space $\spX$ to a linear space $\spY$, b
         && \text{by 2.}
     \end{align*}
 
-  \item Proof that $\opL\brp{\sum_{n=1}^N \alpha_n\vx_n}  = \sum_{n=1}^N \alpha_n\brp{\opL\vx_n}$:
+  \item Proof that $\opL\brp{\sum_{n=1}^\xN \alpha_n\vx_n}  = \sum_{n=1}^\xN \alpha_n\brp{\opL\vx_n}$:
     \begin{enumerate}
       \item Proof for $N=1$:
         \begin{align*}
-          \opL\brp{\sum_{n=1}^N \alpha_n\vx_n}
+          \opL\brp{\sum_{n=1}^\xN \alpha_n\vx_n}
             &= \opL\brp{\alpha_1\vx_1}
             && \text{by $N=1$ hypothesis}
           \\&= \alpha_1\brp{\opL\vx_1}
@@ -392,7 +392,6 @@ Let $\clC{\intcc{a}{b}}{\R}$ be the set of all \prope{continuous} functions from
   }
 \end{example}
 
-
 %---------------------------------------
 \begin{theorem}
 \footnote{
@@ -450,6 +449,7 @@ Let $\oppN(\opL)$ be the \structe{null space} of a linear operator $\opL\in\clLx
 \footnote{
   \citerpgc{berberian1961}{88}{0821819127}{Theorem~IV.5.1}
   }
+\label{thm:L_LMN}
 %---------------------------------------
 Let $\spW$, $\spX$, $\spY$, and $\spZ$ be linear spaces over a field $\F$.
 \thmbox{\begin{array}{>{\scy}rlcl@{\qquad}C@{\qquad}D}
