--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -54,11 +54,12 @@ Let $\opS$ be the \structe{system} illustrated to the right:
   \\&= \Rxv(m) + \Rvv(m)
     && \text{by definitions of $\Rxy$ and $\Rxx$}
     && \text{\xref{def:Rxxm}}
-  \\
+\end{align*}
+\begin{align*}
   \Ryy(m)
     &\eqd \pE\brs{\rvy(m)\rvy^\ast(0)}
     && \text{by (A) and definition of $\Ryy$}
-    && \text{\xref{def:Rxym}}
+    %&& \text{\xref{def:Rxym}}
   \\&\eqd \pE\brs{(\rvx(m)+\rvv(m))(\rvx(0)+\rvv(0))^\ast}
     && \text{by definition of $\rvy$}
   \\&= \mathrlap{
@@ -83,7 +84,7 @@ Let $\opS$ be the \structe{system} illustrated to the right:
      }
   \\&= \Rxx(m) + \Rvv(m)
     && \text{by definition of $\Rxx$}
-    && \text{\xref{def:Rxxm}}
+    %&& \text{\xref{def:Rxxm}}
   \\
   \Rxx(m)
     &\eqd \pE\brs{\rvx(m)\rvx^\ast(0)}
@@ -138,12 +139,12 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:xvy}.
   \end{array}}
   \implies
   \brbl{\begin{array}{FrclD}
-      (1).&\Szyy(z)      &=& \Szxx(z)      + \Szvv(z)      & and
-    \\(2).&\Szyv(z)      &=&                 \Szvv(z)      & and
-    \\(3).&\Szyv(z)      &=& \Szyy(z)      + \Szvv(z) + \Szyv(z) + \Szyv^\ast(z^\ast)   & and
-    \\(4).&\Swyy(\omega) &=& \Swxx(\omega) + \Swvv(\omega) & and
-    \\(5).&\Swyv(\omega) &=&                 \Swvv(\omega) &
-    \\(6).&\Swyv(\omega) &=& \Swyy(\omega) + \Swvv(\omega) + \Swyv(\omega) + \Swyv^\ast(-\omega)   & 
+      (1).&\Szyy(z)      &=& \Szxx(z)      + \Szvv(z)                                            & and
+    \\(2).&\Szyv(z)      &=&                 \Szvv(z)                                            & and
+    \\(3).&\Szyv(z)      &=& \Szyy(z)      + \Szvv(z) + \Szyv(z) + \Szyv^\ast(z^\ast)            & and
+    \\(4).&\Swyy(\omega) &=& \Swxx(\omega) + \Swvv(\omega)                                       & and
+    \\(5).&\Swyv(\omega) &=&                 \Swvv(\omega)                                       & and
+    \\(6).&\Swyv(\omega) &=& \Swyy(\omega) + \Swvv(\omega) + \Swyv(\omega) + \Swyv^\ast(-\omega) & 
   \end{array}}
   }
 \end{corollary}
