--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -82,7 +82,6 @@
        % ||_______ E=even page  O=odd page
        % |________ H=header     F=footer
 
-
 %--------------------------------------
 % footer information
 %--------------------------------------
@@ -94,7 +93,7 @@
     \begin{tabular*}{\tw}{|c@{\extracolsep\fill}|c|c|}%
       \hline\hline%
         \tbox{\href{https://creativecommons.org/licenses/by-nc-nd/4.0/}{\ccbyncnd}}
-       &\fntAdventor\tbox{\imarkL\tbox{#2\\#3}\imarkL\fntDigital\tbox{version\hspace{1ex}{\version}}}%
+         &\fntAdventor\tbox{\imarkL\tbox{#2\\#3\\\fntDigital version\hspace{1ex}\version}\imarkL}%
        &\sffamily\scshape\tbox{\timestamp\\\copyrightshort}%
       \\\hline%
     \end{tabular*}}%
@@ -105,7 +104,66 @@
       \begin{tabular*}{\tw}{|c@{\extracolsep\fill}|c|c|}%
         \hline\hline%
           \sffamily\scshape\tbox{\timestamp\\\copyrightshort}%
-         &\fntAdventor\tbox{\imarkL\tbox{#2\\#3}\imarkL\fntDigital\tbox{version\hspace{1ex}{\version}}}%
+         &\fntAdventor\tbox{\imarkL\tbox{#2\\#3\\\fntDigital version\hspace{1ex}\version}\imarkL}%
+         &\tbox{\href{https://creativecommons.org/licenses/by-nc-nd/4.0/}{\ccbyncnd}}
+        \\\hline%
+      \end{tabular*}}%
+  }% end \footerinfo
+
+%\newcommand{\footerinfo}[3]{%
+%  \fancyhf[FEC]{% footer even pages
+%    \scriptsize%
+%    \setlength{\arrayrulewidth}{0.5pt}%
+%    \arrayrulecolor{gray}%
+%    \begin{tabular*}{\tw}{|c@{\extracolsep\fill}|c|c|}%
+%      \hline\hline%
+%        \tbox{\href{https://creativecommons.org/licenses/by-nc-nd/4.0/}{\ccbyncnd}}
+%       &\fntAdventor\tbox{\imarkL\tbox{#2\\#3}\imarkL\fntDigital\tbox{version\hspace{1ex}{\version}}}%
+%       &\sffamily\scshape\tbox{\timestamp\\\copyrightshort}%
+%      \\\hline%
+%    \end{tabular*}}%
+%  \fancyhf[FOC]{% footer odd pages
+%      \scriptsize%
+%      \setlength{\arrayrulewidth}{0.5pt}%
+%      \arrayrulecolor{gray}%
+%      \begin{tabular*}{\tw}{|c@{\extracolsep\fill}|c|c|}%
+%        \hline\hline%
+%          \sffamily\scshape\tbox{\timestamp\\\copyrightshort}%
+%         &\fntAdventor\tbox{\imarkL\tbox{#2\\#3}\imarkL\fntDigital\tbox{version\hspace{1ex}{\version}}}%
+%         &\tbox{\href{https://creativecommons.org/licenses/by-nc-nd/4.0/}{\ccbyncnd}}
+%        \\\hline%
+%      \end{tabular*}}%
+%  }% end \footerinfo
+
+%--------------------------------------
+% footer information
+%--------------------------------------
+\newcommand{\footerinfou}[2]{%
+  \fancyhf[FEC]{% footer even pages
+    \scriptsize%
+    \setlength{\arrayrulewidth}{0.5pt}%
+    \arrayrulecolor{gray}%
+    \begin{tabular*}{\tw}{|c@{\extracolsep\fill}|c|c|}%
+      \hline\hline%
+        \tbox{\href{https://creativecommons.org/licenses/by-nc-nd/4.0/}{\ccbyncnd}}
+         &\tbox{\imarkL}\begin{tabular}{>{\scs}c}
+             \fntAdventor #1 [\fntDigital version\hspace{1ex}{\version}]%
+           \\\url{#2}
+          \end{tabular}\tbox{\imarkL}
+       &\sffamily\scshape\tbox{\timestamp\\\copyrightshort}%
+      \\\hline%
+    \end{tabular*}}%
+  \fancyhf[FOC]{% footer odd pages
+      \scriptsize%
+      \setlength{\arrayrulewidth}{0.5pt}%
+      \arrayrulecolor{gray}%
+      \begin{tabular*}{\tw}{|c@{\extracolsep\fill}|c|c|}%
+        \hline\hline%
+          \sffamily\scshape\tbox{\timestamp\\\copyrightshort}%
+         &\tbox{\imarkL}\begin{tabular}{>{\scs}c}
+             \fntAdventor #1 [\fntDigital version\hspace{1ex}{\version}]%
+           \\\url{#2}
+          \end{tabular}\tbox{\imarkL}
          &\tbox{\href{https://creativecommons.org/licenses/by-nc-nd/4.0/}{\ccbyncnd}}
         \\\hline%
       \end{tabular*}}%
