footinfou footer style; checking randseq_addnoise

--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -409,12 +409,12 @@ Let $\opS$ be the \structe{system} illustrated to the right.
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 \corbox{
-  \brb{\begin{array}{M}
+  \brbr{\begin{array}{M}
     hypotheses of\\
     \pref{thm:sysH_addnoise}
   \end{array}}
   \implies
-  \brb{\begin{array}{F rcl cl cl D}
+  \brbl{\begin{array}{F r *{3}{@{\hspace{2pt}}c@{\hspace{2pt}}l} D}
       (1).&\Szxy(z)      &=& \Szxq(z)      &=& \Szpy(z)      - \Szuy(z)      &=& \Szpq(z)      - \Szuq(z)      & and
     \\(2).&\Swxy(\omega) &=& \Swxq(\omega) &=& \Swpy(\omega) - \Swuy(\omega) &=& \Swpq(\omega) - \Swuq(\omega) &
   \end{array}}
@@ -546,7 +546,7 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     && \text{by \prefp{thm:xGw_xHy}}
     && \text{and (A)}
   \\&= \ZG(z)\Szxy(z)
-    && \text{by \prefp{thm:sysH_addnoise}}
+    && \text{by \prefp{cor:sysH_addnoise}}
     && \text{and (A)}
   \\
   \Swsy(\omega)
