--- a/common/randseq_dsp.tex
+++ b/common/randseq_dsp.tex
@@ -381,13 +381,13 @@ Let $\opS$ be the \structe{system} illustrated to the right.
 \\
 \thmbox{
   \brb{\begin{array}{FMMD}
-      (A).& $\fg(n)$  is &\prope{LTI}       & and
+      (A).& $\fG$     is &\prope{LTI}       & and
     \\(B).& $\rvx(n)$ is &\prope{WSS}       & 
   \end{array}}
   \implies
   \brb{\begin{array}{rc>{\ds}lDD}
     \Rwy(m) &=&    \sum_{n\in\Z}\fg(n)\Rxy(m-n) 
-          \\&\eqd& \fg(n)\convd\Rxy(m-n)
+          \\&\eqd& \fg(m)\convd\Rxy(m)
             && (\ope{convolution})
   \end{array}}
   }
@@ -403,16 +403,13 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     && \text{(A)}
   \\&= \sum_{n\in\Z}\fg(n)\pE\brs{\rvx(m-n)\rvy^\ast(0)}
     && \text{by \prope{linearity}}
-    && \text{\xref{def:linop}}
+    && \text{\xref{cor:pE_linop}}
   \\&= \sum_{n\in\Z}\fg(n)\Rxy(m-n)
     && \text{by definition of $\Rxy$}
     && \text{\xref{def:Rxym}}
-  \\&= \brs{\fg(n)\convd\Rxy(m-n)}
+  \\&= \brs{\fg(m)\convd\Rxy(m)}
     && \text{by definition of \ope{convolution}}
     && \text{\xref{def:dsp_conv}}
-  \\&= \FG(\omega)\Swxy(\omega)
-    && \text{by \thme{Convolution Theorem}}
-    && \text{\xref{thm:conv}}
 \end{align*}
 \end{proof}
 
@@ -432,30 +429,19 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:xGw_xHy}.
   \end{array}}
   }
 \end{corollary}
-%\\
-%\begin{proof}
-%\begin{align*}
-%  \Swwy(m)
-%  \\&\eqd \pE\brs{\rvw(m)\rvy^\ast(0)}
-%    && \text{by definition of $\Rxy$}
-%    && \text{\xref{def:Rxym}}
-%  \\&= \pE\brs{\sum_{n\in\Z}\fg(n)\rvx(m-n)\rvy^\ast(0)}
-%    && \text{by \prope{LTI} hypothesis}
-%    && \text{(A)}
-%  \\&= \sum_{n\in\Z}\fg(n)\pE\brs{\rvx(m-n)\rvy^\ast(0)}
-%    && \text{by \prope{linearity}}
-%    && \text{\xref{def:linop}}
-%  \\&= \sum_{n\in\Z}\fg(n)\Rxy(m-n)
-%    && \text{by definition of $\Rxy$}
-%    && \text{\xref{def:Rxym}}
-%  \\&= \brs{\fg(n)\convd\Rxy(m-n)}
-%    && \text{by definition of \ope{convolution}}
-%    && \text{\xref{def:dsp_conv}}
-%  \\&= \FG(\omega)\Swxy(\omega)
-%    && \text{by \thme{Convolution Theorem}}
-%    && \text{\xref{thm:conv}}
-%\end{align*}
-%\end{proof}
+\begin{proof}
+\begin{align*}
+  \Swwy(m)
+    &\eqd \opDTFT\Rwy(m)
+    && \text{by definition of $\Swwy$}
+    && \text{\xref{def:Swxy}}
+  \\&= \brs{\fg(m)\convd\Rxy(m)}
+    && \text{by \prefp{thm:xGw_xHy}}
+  \\&= \FG(\omega)\Swxy(\omega)
+    && \text{by \thme{Convolution Theorem}}
+    && \text{\xref{thm:conv}}
+\end{align*}
+\end{proof}
 
 
 %=======================================
