--- a/common/math/graphics/system/xGy_xHw.tex
+++ b/common/math/graphics/system/xGy_xHw.tex
@@ -19,8 +19,8 @@
   % | h[n]|
   % |_____|
   %-------------------------------------
-  \fnodeput{0}{ 0}{+0.75}{sysG}{$\fg(n)$}%
-  \fnodeput{0}{ 0}{-0.75}{sysH}{$\fh(n)$}%
+  \fnodeput{0}{ 0}{+0.75}{sysG}{$\fG$}%
+  \fnodeput{0}{ 0}{-0.75}{sysH}{$\fH$}%
     %       |   |   |     |       |____ label in box
     %       |   |   |     |____________ node name
     %       |   |   |__________________ y location
