--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -332,10 +332,12 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     \\(E).& \pE\rvu(n)=\pE\rvv(n)   &=& 0                   & (\prope{zero-mean})   &
   \end{array}}
   \implies
-  \brb{\begin{array}{rcl}
-      \Rxy(m)&=& \Rxq(m)
-           \\&=& \Rpy(m) - \Ruy(m)
-           \\&=& \Rpq(m) - \Ruq(m)
+  \brb{\begin{array}{Frcl}
+      (1).& \Rxy(m)&=& \Rxq(m)
+    \\(2).& \Ruy(m)&=& \Ruq(m)
+    \\(3).& \Rpy(m)&=& \Rpq(m)
+    \\(4).& \Rpq(m)&=& \Rxy(m) + \Ruy(m)
+    \\(5).& \Rpq(m)&=& \Rxy(m) + \Ruq(m)
   \end{array}}
   }
 \\
@@ -359,64 +361,73 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     && \text{by definition of $\Rxy$}
     && \text{\xref{def:Rxym}}
   \\
-  \Rxy(m)
-    &\eqd \pE\brs{\rvx(m)\rvy^\ast(0)}
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
-  \\&\eqd \pE\brp{\brs{\rvp(m)-\rvu(m)}\rvy^\ast(0)}
-    && \text{by definition of $\opS$}
-  \\&= \pE\brs{\rvp(m)\rvy^\ast(0)-\rvu(m)\rvy^\ast(0)}
-  \\&= \pE\brs{\rvp(m)\rvy^\ast(0)}-\pE\brs{\rvu(m)\rvy^\ast(0)}
-  \\&= \Rpy(m) - \Ruy(m)
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
+  \Ruy(m) 
+    &= \Ruq(m)
+    && \text{by previous result}
+    && \text{(swap $\rvx$ and $\rvu$)}
   \\
-  \Rxy(m)
-    &\eqd \pE\brs{\rvx(m)\rvy^\ast(0)}
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
-  \\&\eqd \pE\brp{\brs{\rvp(m)-\rvu(m)}\brs{\rvq(m)+\rvv(m)}^\ast(0)}
+  \Rpy(m)
+    &\eqd \pE\brs{\rvp(m)\rvy^\ast(0)}
+    && \text{by definition of $\Rpy$}
+    && \text{\pref{def:Rxym}}
+  \\&\eqd \pE\brs{\rvp(m)(\rvq(0)+\rvv(0))^\ast}
     && \text{by definition of $\opS$}
-  \\&=\mathrlap{
-       \pE\brs{\rvp(m)\rvq^\ast(0)}
-     + \pE\brs{\rvp(m)\rvv^\ast(0)}
-     - \pE\brs{\rvu(m)\rvq^\ast(0)}
-     - \pE\brs{\rvu(m)\rvv^\ast(0)}
-     }
-  \\&= \pE\brs{\rvp(m)\rvq^\ast(0)}
-     + \pE\brs{\rvp(m)}\pE\brs{\rvv^\ast(0)}
-     \\&\qquad
-     - \pE\brs{\rvu(m)\rvq^\ast(0)}
-     - \pE\brs{\rvu(m)}\pE\brs{\rvv^\ast(0)}
+  \\&= \pE\brs{\rvp(m)\rvq^\ast(0)+\rvp(m)\rvv^\ast(0)}
+  \\&= \pE\brs{\rvp(m)\rvq^\ast(0)} + \pE\brs{\rvp(m)\rvv^\ast(0)}
+  \\&= \pE\brs{\rvp(m)\rvq^\ast(0)} + \brs{\pE\rvp(m)}\brs{\pE\rvv^\ast(0)}
     && \text{by \prope{uncorrelated} hypothesis}
-    && \text{(B), (C), and (D)}
-  \\&= \pE\brs{\rvp(m)\rvq^\ast(0)}
-     + \pE\brs{\rvp(m)}\cancelto{0}{\pE\brs{\rvv^\ast(0)}}
-     \\&\qquad
-     - \pE\brs{\rvu(m)\rvq^\ast(0)}
-     - \cancelto{0}{\pE\brs{\rvu(m)}}\pE\brs{\rvv^\ast(0)}
+    && \text{(B)}
+  \\&= \pE\brs{\rvp(m)\rvq^\ast(0)} + \brs{\pE\rvp(m)}\cancelto{0}{\brs{\pE\rvv^\ast(0)}}
     && \text{by \prope{zero-mean} hypothesis}
     && \text{(E)}
-  \\&= \Rpq(m) - \Ruq(m)
-    && \text{by definition of $\Rpq$}
-    && \text{\xref{def:Rxym}}
+  \\&= \Rpq(m)
+    && \text{by definition of $\Rpy$}
+    && \text{\pref{def:Rxym}}
+  \\
+  \Rpq(m)
+    &= \Rpy(m)
+    && \text{by previous result}
+    && \text{(2)}
+  \\&\eqd \pE\brs{\rvp(m)\rvy^\ast(0)}
+    && \text{by definition of $\Rpy$}
+    && \text{\pref{def:Rxym}}
+  \\&\eqd \pE\brp{\brs{\rvx(m)+\rvu(m)}\rvy^\ast(0)}
+    && \text{by definition of $\opS$}
+  \\&= \pE\brs{\rvx(m)\rvy^\ast(0)+\rvu(m)\rvy^\ast(0)}
+  \\&= \pE\brs{\rvx(m)\rvy^\ast(0)} + \pE\brs{\rvu(m)\rvy^\ast(0)}
+    && \text{because $\pE$ is a \ope{linear operator}}
+    && \text{\xref{thm:pE_linop}}
+  \\\eqd \Rxy(m) + \Ruy(m)
+    && \text{by definition of $\Rxy$}
+    && \text{\pref{def:Rxym}}
+  \\
+  \Rpq(m)
+    &= \Rxy(m) + \Ruy(m)
+    && \text{by previous result}
+    && \text{(4)}
+  \\&= \Rxy(m) + \Ruq(m)
+    && \text{by previous result}
+    && \text{(2)}
 \end{align*}
 \end{proof}
 
 %---------------------------------------
 \begin{corollary}
-\label{cor:sysH_addnoise}
+\label{cor:sysH_addnoise_z}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 \corbox{
-  \brbr{\begin{array}{M}
+  \brb{\begin{array}{M}
     hypotheses of\\
     \pref{thm:sysH_addnoise}
   \end{array}}
   \implies
-  \brbl{\begin{array}{F r *{3}{@{\hspace{2pt}}c@{\hspace{2pt}}l} D}
-      (1).&\Szxy(z)      &=& \Szxq(z)      &=& \Szpy(z)      - \Szuy(z)      &=& \Szpq(z)      - \Szuq(z)      & and
-    \\(2).&\Swxy(\omega) &=& \Swxq(\omega) &=& \Swpy(\omega) - \Swuy(\omega) &=& \Swpq(\omega) - \Swuq(\omega) &
+  \brb{\begin{array}{Frcl}
+      (1).& \Szxy(z)&=& \Szxq(z)
+    \\(2).& \Szuy(z)&=& \Szuq(z)
+    \\(3).& \Szpy(z)&=& \Szpq(z)
+    \\(4).& \Szpq(z)&=& \Szxy(z) + \Szuy(z)
+    \\(5).& \Szpq(z)&=& \Szxy(z) + \Szuq(z)
   \end{array}}
   }
 \end{corollary}
@@ -433,6 +444,41 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
     && \text{by definition of $\Szxy$}
     && \text{\xref{def:Szxy}}
   \\
+  \Swxy(\omega)
+    &\eqd \opDTFT\Rxy(m)
+    && \text{by definition of $\Swxy$}
+    && \text{\xref{def:Swxy}}
+  \\&= \opDTFT\Rxq(m)
+    && \text{by \prefp{thm:sysH_addnoise}}
+    && \text{(1)}
+  \\&= \Swxq(\omega)
+    && \text{by definition of $\Swxy$}
+    && \text{\xref{def:Swxy}}
+\end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{corollary}
+\label{cor:sysH_addnoise}
+%---------------------------------------
+Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
+\corbox{
+  \brb{\begin{array}{M}
+    hypotheses of\\
+    \pref{thm:sysH_addnoise}
+  \end{array}}
+  \implies
+  \brb{\begin{array}{Frcl}
+      (1).& \Swxy(\omega)&=& \Swxq(\omega)
+    \\(2).& \Swuy(\omega)&=& \Swuq(\omega)
+    \\(3).& \Swpy(\omega)&=& \Swpq(\omega)
+    \\(4).& \Swpq(\omega)&=& \Swxy(\omega) + \Swuy(\omega)
+    \\(5).& \Swpq(\omega)&=& \Swxy(\omega) + \Swuq(\omega)
+  \end{array}}
+  }
+\end{corollary}
+\begin{proof}
+\begin{align*}
   \Swxy(\omega)
     &\eqd \opDTFT\Rxy(m)
     && \text{by definition of $\Swxy$}
@@ -531,8 +577,10 @@ Let $\opS$ be the \structe{system} illustrated to the right.
   \end{array}}
   \implies
   \brb{\begin{array}{FrclD}
-      (1).& \Szsy(z)      &=& \ZG(z)     \Szxy(z)      & and
-    \\(2).& \Swsy(\omega) &=& \FG(\omega)\Swxy(\omega) &
+    (1).& \Szsy(z)      &=& \ZG(z)          \Szpq(z)                      &    \\ 
+        & \mc{3}{l}{\qquad= \ZG(z)     \brs{\Szxy(z)     +\Szuy(z)}}      & and\\
+    (2).& \Swsy(\omega) &=& \FG(\omega)     \Swpq(\omega)                 &    \\
+        & \mc{3}{l}{\qquad= \FG(\omega)\brs{\Swxy(\omega)+\Swuy(\omega)}} &
   \end{array}}
   }
 \\
@@ -543,10 +591,10 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     && \text{by \prefp{cor:dual_addnoise}}
     && \text{and (B), (C) and (D)}
   \\&= \ZG(z)\Szpq(z)
-    && \text{by \prefp{thm:xGw_xHy}}
+    && \text{by \prefp{cor:xGw_xHy}}
     && \text{and (A)}
-  \\&= \ZG(z)\Szxy(z)
-    && \text{by \prefp{cor:sysH_addnoise}}
+  \\&= \ZG(z)\brs{\Szxy(z) + \Szuy(z)}
+    && \text{by \prefp{cor:sysH_addnoise_z}}
     && \text{and (A)}
   \\
   \Swsy(\omega)
@@ -554,10 +602,10 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     && \text{by \prefp{cor:dual_addnoise}}
     && \text{and (B), (C) and (D)}
   \\&= \FG(\omega)\Swpq(\omega)
-    && \text{by \prefp{thm:xGw_xHy}}
+    && \text{by \prefp{cor:xGw_xHy}}
     && \text{and (A)}
-  \\&= \FG(\omega)\Swxy(\omega)
-    && \text{by \prefp{thm:sysH_addnoise}}
+  \\&= \FG(\omega)\brs{\Swxy(\omega) + \Swuy(\omega)}
+    && \text{by \prefp{cor:sysH_addnoise}}
     && \text{and (A)}
 \end{align*}
 \end{proof}
